--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -3,5 +3,5 @@
 {% block content %}
 <p>Logged out!</p>  
 
-<a href="{% url 'login'%}">Click here to login again.</a>
+<a href="{% url 'login'%}"><button style="width:50px;height:50px;backgound:green;border:2px solid green;color:white;">Login again.</button></a>
 {% endblock %}
